[package]
name = "wavr-engine"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
smallvec = "1.4.1"
wavr-audio-buffer = { path = "../wavr-audio-buffer" }
wavr-meter = { path = "../wavr-meter" }

[dev-dependencies]
byteorder = "1.3"
hound = "3.4"
