[package]
name = "wavr-meter-iced"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wavr-meter = { path = "../wavr-meter" }
iced = "0.1"
iced_native = "0.2"
iced_wgpu = "0.2"
num = "0.3"

[dev-dependencies]
iced_futures = { version = "0.1", features = ["async-std"] }
async-std = { version = "1.0", features = ["unstable"] }
cpal = "0.11"