[package]
name = "wavr-meter-relm"
version = "0.1.0"
authors = ["Nathan Graule <solarliner@gmail.com>"]
edition = "2018"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo-rs = "0.9"
gdk = "0.13"
gtk = "0.9"
relm = "0.20"
relm-derive = "0.20"
num = "0.3"
pango = "0.9"
wavr-audio-buffer = { path = "../wavr-audio-buffer" }
wavr-engine = { path = "../wavr-engine" }
wavr-meter = { path = "../wavr-meter" }

[dev-dependencies]
cpal = "0.12"
